fixed bug with registration page - the register button was not showing up

--- a/app/assets/stylesheets/register.css
+++ b/app/assets/stylesheets/register.css
@@ -15,6 +15,6 @@ body{
   visibility: hidden;
 }
 
-#terms:checked ~ .register{
+#I_Accept:checked ~ .register{
   visibility: visible;
 }
